--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -2,6 +2,9 @@
     margin: 0;
     font-family: 'Open Sans', sans-serif;
 }
+section{
+    margin-top: 130px ;
+}
 
 .header {
     background: #FFF8F3;
@@ -83,6 +86,7 @@ main {
 }
 
 .section-title {
+    text-align: center;
     font-weight: 700;
     font-size: 35px;
     margin-bottom: 30px;
@@ -109,4 +113,26 @@ main {
     font-weight: 700;
     font-size: 20px;
     color: #474747;
+}
+.what-i-do{
+    margin-top: 130px;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.skill-description{
+color: #757575;
+}
+.skill{
+    background: #FFFFFF;
+box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+border-radius: 5px;
+padding: 30px;
 }
