--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -2,8 +2,9 @@
     margin: 0;
     font-family: 'Open Sans', sans-serif;
 }
-section{
-    margin-top: 130px ;
+
+section {
+    margin-top: 130px;
 }
 
 .header {
@@ -89,7 +90,7 @@ main {
     text-align: center;
     font-weight: 700;
     font-size: 35px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 
 .section-description {
@@ -114,25 +115,61 @@ main {
     font-size: 20px;
     color: #474747;
 }
-.what-i-do{
+
+.what-i-do {
     margin-top: 130px;
 }
-.skills-container{
+
+.skills-container {
     display: flex;
     gap: 24px;
 }
-.skill-title{
+
+.skill-title {
     font-weight: 700;
     font-size: 20px;
     margin-top: 30px;
     margin-bottom: 20px;
 }
-.skill-description{
-color: #757575;
+
+.skill-description {
+    color: #757575;
 }
-.skill{
+
+.skill {
     background: #FFFFFF;
-box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
-border-radius: 5px;
-padding: 30px;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.resume-content {
+    display: flex;
+    gap: 24px;
+}
+
+.resume .title {
+    font-weight: 600;
+    font-size: 20px;
+    color: #474747;
+    margin-bottom: 10px;
+}
+
+.resume .sub-title {
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.resume .description {
+    color: #757575;
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
 }
